--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,41 @@
+<h1>*ngFor</h1>
+<input type="text" required [(ngModel)]="newName" />
+<button (click)="addName()">Añadir a mas OP</button>
+  <ul>
+    <li *ngFor="let name of names; index as i">
+        {{i}} {{name}}
+        <button (click)="eliminateName(i)">Eliminar</button>
+    </li>
+  </ul>
+
+
+<h1>*ngIf</h1>
+<input type="text" required [(ngModel)]="person.name" />
+<p *ngIf="person.name === 'nicolas'">Soy Nicolas</p>
+<p *ngIf="person.name === 'julian' && person.age === 18; else myBlock">Soy Julian</p>
+<ng-template #myBlock>
+  <p>Bloque de else</p>
+</ng-template>
+<hr/>
+
+<h1>NgModul</h1>
+<p>Nombre{{ person.name}} </p>
+<input type="text" [value]="person.name" required #nameInput="ngModel" [(ngModel)]="person.name" />
+<p>Valid: {{nameInput.valid}}</p>
+
+<p>Edad{{ person.age}} </p>
+<input type="number" max="18" min="10" [value]="person.name" required #ageInput="ngModel" [(ngModel)]="person.age" />
+<p>Valid: {{ageInput.valid}}</p>
 
 <h1>Eventos</h1>
 <button [disabled]="btnDisabled">Enviar</button>
 <button (click)="toggleButton()">Toggle Button</button>
 <p>Edad {{ person.age }}</p>
 <button (click)="increaseAge()">Age ++</button>
+<div class="box" (scroll)="onScroll($event)">
+<p>Una mañana, tras un sueño intranquilo, Gregorio Samsa se despertó convertido en un monstruoso insecto. Estaba echado de espaldas sobre un duro caparazón y, al alzar la cabeza, vio su vientre convexo y oscuro, surcado por curvadas callosidades, sobre el que casi no se aguantaba la colcha, que estaba a punto de escurrirse hasta el suelo. Numerosas patas, penosamente delgadas en comparación con el grosor normal de sus piernas, se agitaban sin concierto. - ¿Qué me ha ocurrido? No estaba soñando. Su habitación, una habitación normal, aunque muy pequeña, tenía el aspecto habitual. Sobre la mesa había desparramado un muestrario de paños - Samsa era viajante de comercio-, y de la pared colgaba una estampa recientemente recortada de una revista ilustrada y puesta en un marco dorado. La estampa mostraba</p>
+</div>
+<input type="text" [value]="person.name" (keydown)="changeName($event)">
 <hr/>
 <h1>
     Propiedades
